debmirror (2009xxxx) UNRELEASED; urgency=low

  * New maintainer, with thanks to Goswin for his work on previous releases.
  * Remove no longer needed prerm script.
  * Correct syntax of NEWS.Debian file.

 -- Frans Pop <fjp@debian.org>  Fri, 07 Aug 2009 19:24:01 +0200

debmirror (20070123) unstable; urgency=low

  * Add dependency for libdigest-sha1-perl (ACK NMU) (Closes: #386707)
  * Change manpage entry for --pdiff (Closes: #386697)
  * Fix Release.gpg check to use gpgv (Closes: #400526)
  * Fix use of uninitialized value in addition
  * Count errors in pdiff files as small errors (Closes: #400054)
  * Cleanup tempfiles (Closes: 399834)
  * Fix manpage permissions with patch by (Closes: #399058)
    "Dmitry E. Oboukhov" <dimka@avanto.org>
  * Skip pdiff files if patch binary is missing (Closes: #401245)
  * Skip pdiff files if ed binary is missing and recommend it (Closes: #397936)

 -- Goswin von Brederlow <brederlo@informatik.uni-tuebingen.de>  Tue, 23 Jan 2007 14:53:14 +0100

debmirror (20060907) unstable; urgency=low

  * Merge pdiff patch by Peter Colberg <peterco@gmx.net> (Closes: #366855)
  * Add --pdiff-mode option
  * Add rsync patch by Peter Colberg <peterco@gmx.net> (Closes: #299342)
  * Disable caching for Release and Release.gpg (Closes: #376495)
  * Default to --postcleanup (Closes: #295423)
  * Print ftp hashes to stdout (Closes: #349856)
    (Patch by Bastian Kleineidam <calvin@debian.org>)
  * Fix typo found by Luca Bruno <luca.br@uno.it> (Closes: #362561)
  * Implement ftp authentication with user/passwd (Closes: #360453)
    (Patch by Peter Baumann <waste.manager@gmx.de>)
  * Skip Index files that don't exist locally nor in Release
    Obsoletes other ideas from the BTS (Closes: #369061, #360451, #382271)
  * Fail immediately if the signature cannot be verified (Closes: #316528)
  * Show gpg error message on failure (Closes: #316529)
  * Skip gpg test if --ignore-release-gpg is specified (Closes: #322714)