@@ -1,0 +1,7 @@
+all: debmirror.1
+
+debmirror.1:
+	pod2man debmirror >$@
+
+clean:
+	rm -f debmirror.1
