@@ -2,11 +2,12 @@ Source: debmirror
 Section: net
 Priority: extra
 Maintainer: Frans Pop <fjp@debian.org>
+Build-Depends: debhelper (>= 7)
 Standards-Version: 3.7.2.0
 
 Package: debmirror
 Architecture: all
-Depends: libnet-perl, libdigest-md5-perl, libdigest-sha1-perl, liblockfile-simple-perl, rsync, libcompress-zlib-perl, bzip2, libwww-perl
+Depends: ${misc:Depends}, libnet-perl, libdigest-md5-perl, libdigest-sha1-perl, liblockfile-simple-perl, rsync, libcompress-zlib-perl, bzip2, libwww-perl
 Recommends: gnupg, patch, ed
 Description: Debian partial mirror script, with ftp and package pool support
  This program downloads and maintains a partial local Debian mirror.
